--- a/index.html
+++ b/index.html
@@ -17,21 +17,32 @@
   <header id="header">
     
     <nav class="container">
-      <a class="logo" href="#">beautysalon.</a>
+      <a class="logo" href="#">beauty<span>salon.</span> </a>
       <div class="menu">...</div>
     </nav>
   </header>  
 
   <main>
-    <section>
-      <div class="container">
+    <section id="home" class="section">
+      <div class="container grid">
+       <div class="image">
         <img src="./assets/mulherSorrindoPenteandoOutraMulher.png" alt="Mulher sorrindo penteando outra mulher">
+       </div>
   
-        <h1>Saúde natural para o seus cabelos</h1>
+        <div class="text">
+          <h1>Saúde natural para o seus cabelos</h1>
         <p>
           Um salão exclusivo em São Paulo, especializado em tratamentos naturais.
         </p>
-        <a href="#">Agendar um horário</a>
+        <a class="button" href="#">Agendar um horário</a>
+        </div>
+
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container">
+        outra section
 
       </div>
     </section>
