--- a/index.html
+++ b/index.html
@@ -40,10 +40,13 @@
       </div>
     </section>
 
+    <div class="divider-1">
+      
+    </div>
+
     <section class="section">
       <div class="container">
         outra section
-
       </div>
     </section>
   </main>
