--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -38,9 +38,9 @@
 
     </nav>
   </header>  
-
+<!-- 
   <main>
-    <section id="home" class="section">
+    <section  class="section" id="home" >
       <div class="container grid">
        <div class="image">
         <img src="./assets/mulherSorrindoPenteandoOutraMulher.png" alt="Mulher sorrindo penteando outra mulher">
@@ -79,24 +79,29 @@
     </section>
     
     <div class="divider-2"></div>
-
+ -->
+ 
     <section class="section" id="services">
       <div class="container grid">
-        <header></header>
-          <div class="cards">
+        <header>
+          <h2 class="title">Serviços</h2>
+          <p>Com mais de 10 anos no mercado, o <strong>Beautysalon</strong> já conquistou clientes de inúmeros países com seus tratamentos exclusivos e totalmente naturais</p>
+        </header>
+          <div class="cards grid">
             <div class="card">
-              <div class="icon-"></div>
+              <i class="icon-woman-hair"></i>
               <h3 class="title">Terapia capilar </h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dicta sit odio, itaque provident est? Iure harum consequuntur, nesciunt sapiente provident at modi eveniet vero eius molestias! Nulla, mollitia sequi.</p>
               
             </div>
             <div class="card">
-              <div class="icon-">Cortes</div>
-              <h3 class="title">corte</h3>
+              <i class="icon-trim"></i>
+              <h3 class="title">Corte</h3>
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur corrupti facere enim voluptas modi? Mollitia autem perspiciatis provident rem, molestiae iusto recusandae explicabo laborum amet at sunt, quasi temporibus odio.</p>
             </div>
+
             <div class="card">
-              <div class="icon-"></div>
+              <i class="icon-cosmetic"></i>
               <h3 class="title">Tratamentos</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione velit, suscipit eos iure iusto veniam iste! Consectetur rem culpa velit dolorum similique laborum, expedita quisquam deserunt, saepe minus blanditiis quia.</p>
             </div>
