--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <!-- Icones -->
   <link rel="stylesheet" href="./assets/fonts/style.css">
 
+   <!-- Swiper carrocel -->
+   <link
+   rel="stylesheet"
+   href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
+ />
+
   <!-- STYLES -->
   <link rel="stylesheet" href="./style.css">
 
@@ -16,6 +22,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+
+ 
 
 </head>
 <body>
@@ -38,27 +46,27 @@
 
     </nav>
   </header>  
-
+<!--
   <main>
+    <!-- Home 
     <section  class="section" id="home" >
       <div class="container grid">
        <div class="image">
         <img src="./assets/mulherSorrindoPenteandoOutraMulher.png" alt="Mulher sorrindo penteando outra mulher">
        </div>
-  
-        <div class="text">
+          <div class="text">
           <h2 class="title" >Saúde natural para o seus cabelos</h2>
         <p>
           Um salão exclusivo em São Paulo, especializado em tratamentos naturais.
         </p>
         <a class="button" href="#">Agendar um horário</a>
         </div>
-
       </div>
     </section>
 
     <div class="divider-1"></div>
 
+    <!-- About 
     <section class="section" id="about">
       <div class="container grid"></div>
       <div class="image">
@@ -80,7 +88,7 @@
     
     <div class="divider-2"></div>
 
- 
+    <!-- Services 
     <section class="section" id="services">
       <div class="container grid">
         <header>
@@ -110,8 +118,70 @@
       </div>
     </section>
 
+    <div class="divider-1"></div>
+  -->
+    <!-- Testimonials -->
+    <section class="section" id="testimonials">
+      <div class="container">
+        <header>
+          <h2 class="title">Depoimentos de 
+            quem já passou 
+            por aqui
+          </h2>
+        </header>
+        <div class="testimonials swiper">
+          <div class="swiper-wrapper">
+            <div class="testimonial swiper-slide">
+            <blockquote>
+              <p>
+                <span>&ldquo;</span>
+                Eu sou cliente do Beautysalon há 5 anos e não troco por nada! Certamente meu cabelo mudou muito depois que comecei a tratar somente com produtos naturais e veganos. São profissionais incríveis e qualificados.   
+              </p>
+              <cite>
+                <img src="./assets/fotos/WanessaSouza.jpg" alt="Foto da Wanessa Souza">
+                Wanessa Souza
+              </cite>
+            </blockquote>            
+            </div>
+
+            <div class="testimonial swiper-slide">
+            <blockquote>
+              <p>
+                <span>&ldquo;</span>
+                Minha mãe frequenta o salão há anos e me levou um dia para conhecer. Minha experiência foi incrível, eu continuo fazendo o a terapia capilar e isso salvou o meu cabelo. Adoro todos os profissionais do Beautysalon.
+              </p>
+              <cite>
+                <img src="./assets/fotos/FrancieleVenega.jpg" alt="Foto da Franciele Venega">
+                Franciele Venega
+              </cite>
+            </blockquote>            
+            </div>
+
+            <div class="testimonial swiper-slide">
+            <blockquote>
+              <p>
+                <span>&ldquo;</span>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem consequuntur sunt vitae quibusdam, id repudiandae!
+              </p>
+              <cite>
+                <img src="./assets/fotos/ValeskaFabris.jpg" alt="Foto da Valeska Fabris">
+                Valeska Fabris
+              </cite>
+            </blockquote>            
+            </div>
+          </div>
+
+          <!-- If we need pagination -->
+          <div class="swiper-pagination"></div>
+        </div>    
+      </div>
+    </section>
+
+
+    <!-- Contact -->
   </main>
 </body>
-
+<!-- swiper carrocel imagens -->
+<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 <script src="./main.js"></script>
 </html>
