--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <blockquote>
               <p>
                 <span>&ldquo;</span>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem consequuntur sunt vitae quibusdam, id repudiandae!
+                Ótimo lugar...atendimento 100%, recomendo!
               </p>
               <cite>
                 <img src="./assets/fotos/ValeskaFabris.jpg" alt="Foto da Valeska Fabris">
