--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <!-- About -->
     <section class="section" id="about">
-      <div class="container grid"></div>
+      <div class="container grid">
       <div class="image">
         <img src="./assets/3mullheresSorrindo.png" alt="3 mulheres sorrindo">
       </div>
@@ -82,7 +82,7 @@
         <br>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad fuga adipisci deserunt. Iure maxime a odit omnis consectetur. Eveniet, itaque hic excepturi maiores facere porro explicabo placeat facilis sunt nostrum?
         </p>
-      
+      </div>
       </div>
     </section>
     
